src/main/resources/tests/Semantics/bad/assignmentType2.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
   X : integer := false;
begin
    put('E');
end ExampleProcedure;
